# Pytorch_Merge

./: README.md  py_merge.py  pyproject.toml
.github/: FUNDING.yml
src/pytorch_merge/: __init__.py  pytorch_merge.py
